--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Rest crud service for sportmarket",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Karpo & Zhurbelyk",
   "license": "MIT",
@@ -14,5 +15,8 @@
     "express": "^4.17.1",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
