--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "Karpo & Zhurbelyk",
   "license": "MIT",
   "dependencies": {
+    "async": "^3.1.0",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.0",
+    "helmet": "^3.21.2",
     "mongodb": "^3.3.3",
     "mongoose": "^5.7.5"
   },
